# jw_hsma_des_stroke_project

./: .gitignore  404.html  final_report.json  index.html  mkdocs.yml  objects.inv  plus_metadata.json  pyproject.toml  readme.md  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: publish-docs.yml
CHANGELOG/: index.html
app/: README.md  about.py  app_utils.py  convert_event_log.py  index.html  metrics.py  model.py  plots.py  requirements.txt  run_model.py  streamlit_app.py
app/.streamlit/: README.md  config.toml
app/resources/: README.md  style.css
app/static/: README.md
checklists/: stress_des.xlsx
dev/: README.md
docs/: CHANGELOG.md  app.md  g.md  index.md  model.md  pathway_diagram.md  patient.md  running_locally.md  stress_des.md  tests.md  trial.md
docs/diagrams/: pathway_diagram.mmd
docs/scripts/: stress_des_to_md.py
environment/: environment.yml  requirements.txt
g/: index.html
model/: index.html
pathway_diagram/: index.html
patient/: index.html
preprocessing/: preprocessing.ipynb
running_locally/: index.html
scripts/: README.md  run_stroke_admission_model.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CHANGELOG/: index.html
stress_des/: index.html
tests/: conftest.py  generate_backtest_results.py  index.html  test_backtest.py  test_functional.py  test_reproducibility.py  test_unit_distributions.py  test_unit_entities.py  test_unit_inputs.py  test_unit_model.py  test_unit_plots.py  test_unit_trial.py  test_unit_utils.py
trial/: index.html
(+16 files in other folders)
